<resources>
    <string name="app_name">MeetUp</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications </string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="account">Account settings</string>
    <string name="logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to meetup!\n
        \nHere you can find new friends based on your hobbies.
        \nFollow these steps to start making friends:
        \n1. Navigate to "Search"
        \n2. Add hobbies to your profile
        \n3. Navigate to "Matches"
        \n4. There you will see the contact-information of users, who share the same hobbies with you
        \n\nHave fun meeting up with new people!
"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="matchesscreentitle">"Matches"</string>
    <string name="hobbyscreentitle">"Add hobbies to your profile"</string>
    <string name="hobbysearchfield">"Hobby"</string>
    <string name="searchbutton">"Search"</string>
    <string name="constNameString">"Name:"</string>
    <string name="constPhonenumberString">"Phonenumber:"</string>
    <string name="consthobbyString">"Hobbies:"</string>
    <string name="matchname">"-"</string>
    <string name="matchphonenumber">"-"</string>
    <string name="matchhobbies">"-"</string>

    <string-array name="matches_names">
        <item>match1</item>
        <item>match2</item>
        <item>match3</item>
        <item>match4</item>
        <item>match5</item>
        <item>match6</item>
        <item>match7</item>
        <item>match8</item>
        <item>match9</item>
        <item>match10</item>
    </string-array>

    <string-array name="matches_phonenumbers">
    <item>Random phonenumber</item>
    <item>Random phonenumber</item>
    <item>Random phonenumber</item>
    <item>Random phonenumber</item>
    <item>Random phonenumber</item>
    <item>Random phonenumber</item>
    <item>Random phonenumber</item>
    <item>Random phonenumber</item>
    <item>Random phonenumber</item>
    <item>Random phonenumber</item>
    </string-array>

    <string-array name="matches_hobbies">
        <item>Random hobby</item>
        <item>Random hobby</item>
        <item>Random hobby</item>
        <item>Random hobby</item>
        <item>Random hobby</item>
        <item>Random hobby</item>
        <item>Random hobby</item>
        <item>Random hobby</item>
        <item>Random hobby</item>
        <item>Random hobby</item>
    </string-array>
</resources>
