<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/matchcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="400px">

            <TextView
                android:id="@+id/constname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constNameString"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.09" />

            <TextView
                android:id="@+id/matchphonenumber"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:text="@string/matchphonenumber"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.33" />

            <TextView
                android:id="@+id/matchhobbies"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:text="@string/matchhobbies"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.593" />

            <TextView
                android:id="@+id/consthobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/consthobbyString"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.593" />

            <TextView
                android:id="@+id/constphonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constPhonenumberString"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.33" />

            <TextView
                android:id="@+id/matchname"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:text="@string/matchname"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.09" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>